Fixed the watercolor image on smaller screens by position: fixed;

--- a/css/styles.css
+++ b/css/styles.css
@@ -46,12 +46,13 @@ body {
 
     height: 100%;
     width: 100%;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     z-index: 1;
 
     opacity: .6;
+
 }
 
 .content-box {
